[project]
name = "crypto-data-cache"
version = "0.1.0"
description = "A Python library for efficiently downloading, caching, and managing cryptocurrency market data from Binance"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Luca", email = "your.email@example.com"}
]
keywords = ["cryptocurrency", "binance", "data", "cache", "trading", "kline", "market-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]

[project.urls]
Homepage = "https://github.com/yourusername/crypto-data-cache"
Repository = "https://github.com/yourusername/crypto-data-cache.git"
Issues = "https://github.com/yourusername/crypto-data-cache/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crypto_data_cache"]
